add DELETE photo
